[workspace]
members = [
  "packages/bln/client",
  "packages/bln/sdk",
  "packages/cardano/connector",
  "packages/cardano/connector-client",
  "packages/cardano/connector-direct",
  "packages/cardano/connector-utxorpc",
  "packages/cardano/sdk",
  "packages/konduit/cli",
  "packages/konduit/client",
  "packages/konduit/data",
  # "packages/konduit/integration",
  # "packages/konduit/receipt",
  "packages/konduit/server",
  "packages/konduit/tx",
  "packages/konduit/wasm",
  "packages/konduit/wire",
  "packages/util/cbor-with",
  "packages/util/cbor-with",
  "packages/util/cobbl3",
  "packages/util/cuddly",
  "packages/util/cuddly-derive",
  "packages/util/fx-client",
  "packages/util/http-client",
  "packages/util/powdos",
  "packages/util/problem-details",
  "packages/util/problem-details-derive",
]
resolver = "2"

[workspace.package]
description = "Konduit tools and other things"
documentation = "https://github.com/cardano-lightning/konduit"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/cardano-lightning/konduit"
homepage = "https://github.com/cardano-lightning/konduit"
license = "MPL-2.0"
authors = ["waalge", "KtorZ <matthias.benkort@gmail.com>"]
rust-version = "1.95.0"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
bech32 = "0.9.1"
bitcoin = "0.32.8"
blake3 = "1.8.5"
blockfrost = "1.2.4"
blockfrost-openapi = "0.1.88"
cddl-cat = "0.7.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
cryptoxide = "0.5.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
getrandom = "0.2.16"
gloo-net = "0.6.0"
gloo-timers = { features = ["futures"], version = "0.3.0" }
hex = "0.4.3"
http = { version = "1.4.1", default-features = false }
humantime = "2.3.0"
idb = "0.6.5"
indoc = "2.0.6"
itertools = "0.14.0"
js-sys = "0.3.82"
lightning-invoice = "0.34.0"
lightning-types = "0.3.0"
log = "0.4.28"
minicbor = { version = "0.25.1", features = ["alloc", "derive"] }
num = "0.4.3"
num-bigint = "0.4.6"
pallas-addresses = "0.35.1"
pallas-codec = "0.35.1"
pallas-crypto = "0.35.1"
pallas-primitives = "0.35.1"
postcard = { version = "1.1.3", features = ["postcard-derive", "use-std"] }
proptest = { version = "1.8.0", default-features = false }
proptest-derive = "0.7.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = "0.13"
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
serde_json = { version = "1.0.145", features = ["std"] }
serde_with = { version = "3.16.1", features = ["hex", "base64"] }
sha2 = "0.11.0"
sled = "0.34.7"
subtle = "2.6.1"
thiserror = { version = "2", default-features = false }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.10"
trait-variant = "0.1.2"
uplc = "1.1.22"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4.55", default-features = false }
web-sys = { version = "0.3.85", features = ["AbortController", "AbortSignal"] }
web-time = "1.1.0"

bln-client = { path = "packages/bln/client", default-features = false }
bln-sdk = { path = "packages/bln/sdk", default-features = false }
cardano-connector = { path = "packages/cardano/connector", default-features = false }
cardano-connector-client = { path = "packages/cardano/connector-client", default-features = false }
cardano-connector-direct = { path = "packages/cardano/connector-direct", default-features = false }
cardano-connector-utxorpc = { path = "packages/cardano/connector-utxorpc", default-features = false }
cardano-sdk = { path = "packages/cardano/sdk", default-features = false }
cbor-with = { path = "packages/util/cbor-with", default-features = false }
cobbl3 = { path = "packages/util/cobbl3", default-features = false }
cuddly = { path = "packages/util/cuddly", default-features = false }
cuddly-derive = { path = "packages/util/cuddly-derive", default-features = false }
fx-client = { path = "packages/util/fx-client", default-features = false }
http-client = { path = "packages/util/http-client", default-features = false, features = [
  "std",
] }
konduit-client = { path = "packages/konduit/client", default-features = false }
konduit-data = { path = "packages/konduit/data", default-features = false }
konduit-receipt = { path = "packages/konduit/receipt", default-features = false }
konduit-server = { path = "packages/konduit/server", default-features = false }
konduit-tx = { path = "packages/konduit/tx", default-features = false }
konduit-wire = { path = "packages/konduit/wire", default-features = false }
problem-details = { path = "packages/util/problem-details", default-features = false }
problem-details-derive = { path = "packages/util/problem-details-derive", default-features = false }

[profile.wasm]
inherits = "release"
lto = true
opt-level = 'z'
