[workspace]
members = [
  "packages/bln/client",
  "packages/bln/sdk",
  "packages/cardano/connector",
  "packages/cardano/connector-client",
  "packages/cardano/connector-direct",
  "packages/cardano/connector-utxorpc",
  "packages/cardano/sdk",
  "packages/util/cobbl3",
  "packages/util/fx-client",
  "packages/util/http-client",
  "packages/util/powdos",
  "packages/util/problem-details-derive",
  "packages/util/problem-details",
  "packages/konduit/cli",
  "packages/konduit/client",
  "packages/konduit/data",
  "packages/konduit/server",
  "packages/konduit/tx",
  "packages/konduit/wasm",
]
resolver = "2"

[workspace.package]
description = "Konduit tools and other things"
documentation = "https://github.com/cardano-lightning/konduit"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/cardano-lightning/konduit"
homepage = "https://github.com/cardano-lightning/konduit"
license = "MPL-2.0"
authors = ["waalge", "KtorZ <matthias.benkort@gmail.com>"]
rust-version = "1.95.0"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
bech32 = "0.9.1"
bincode = "1.3.3"
bitcoin = "0.32.8"
bitcoin_hashes = "=0.14.0"
blake3 = "1.8.5"
blockfrost = "1.2.4"
blockfrost-openapi = "0.1.88"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
cryptoxide = "0.5.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
envy = "0.4.2"
futures = "0.3.31"
futures-util = "0.3.31"
getrandom = "0.2.16"
gloo-net = "0.6.0"
gloo-timers = { features = ["futures"], version = "0.3.0" }
hex = "0.4.3"
http = "1.4.2"
humantime = "2.3.0"
indoc = "2.0.6"
itertools = "0.14.0"
js-sys = "0.3.82"
lightning-invoice = "0.34.0"
lightning-types = "0.3.0"
log = "0.4.28"
minicbor = { version = "0.25.1", features = ["alloc", "derive"] }
num = "0.4.3"
num-bigint = "0.4.6"
pallas-addresses = "0.35.1"
pallas-codec = "0.35.1"
pallas-crypto = "0.35.1"
pallas-primitives = "0.35.1"
postcard = { version = "1.1.3", features = ["postcard-derive", "use-std"] }
proptest = "1.8.0"
proptest-derive = "0.7.0"
rand = "0.6.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = "0.13"
send_wrapper = "0.6.0"
serde = "1.0.228"
serde-hex = "0.1.0"
serde-wasm-bindgen = "0.6.5"
serde_json = { version = "1.0.145", features = ["std"] }
serde_with = { version = "3.16.1", features = ["hex", "base64"] }
sha2 = "0.11.0"
sled = "0.34.7"
subtle = "2.6.1"
thiserror = "2"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.10"
trait-variant = "0.1.2"
uplc = "1.1.22"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.85", features = ["AbortController", "AbortSignal"] }
web-time = "1.1.0"

bln-client = { path = "packages/bln/client" }
bln-sdk = { path = "packages/bln/sdk" }
cardano-connector = { path = "packages/cardano/connector" }
cardano-connector-client = { path = "packages/cardano/connector-client" }
cardano-connector-direct = { path = "packages/cardano/connector-direct" }
cardano-connector-utxorpc = { path = "packages/cardano/connector-utxorpc" }
cardano-sdk = { path = "packages/cardano/sdk" }
fx-client = { path = "packages/util/fx-client" }
http-client = { path = "packages/util/http-client", default-features = false }
konduit-client = { path = "packages/konduit/client" }
konduit-data = { path = "packages/konduit/data" }
konduit-server = { path = "packages/konduit/server" }
konduit-tx = { path = "packages/konduit/tx" }
problem-details = { path = "packages/util/problem-details" }
problem-details-derive = { path = "packages/util/problem-details-derive" }

[profile.wasm]
inherits = "release"
lto = true
opt-level = 'z'
