[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
description = "Konduit tools and other things"
documentation = "https://github.com/cardano-lightning/konduit"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/cardano-lightning/konduit"
homepage = "https://github.com/cardano-lightning/konduit"
license = "MPL-2.0"
authors = [
    "waalge",
    "KtorZ <matthias.benkort@gmail.com>",
]
rust-version = "1.90.0"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
blockfrost = "1.1.0"
blockfrost-openapi = "0.1.75"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
cryptoxide = "0.5.1"
dotenv = "0.15.0"
futures = "0.3.31"
hex = "0.4.3"
indoc = "2.0.6"
itertools = "0.14.0"
minicbor = { version = "0.25.1", features = ["alloc", "derive"] }
num = "0.4.3"
num-bigint = "0.4.6"
pallas-addresses = "0.33.0"
pallas-codec = "0.33.0"
pallas-crypto = "0.33.0"
pallas-primitives = "0.33.0"
proptest = "1.8.0"
rand = "0.9.2"
reqwest = "0.12.23"
serde = "1.0.228"
serde_json = { version = "1.0.145", features = ["std"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
uplc = "1.1.19"
wasm-bindgen = "0.2"

cardano-tx-builder = { path = "crates/cardano-tx-builder" }
cardano-connect = { path = "crates/cardano-connect" }
cardano-connect-blockfrost = { path = "crates/cardano-connect-blockfrost" }
konduit-tx = { path = "crates/konduit-tx" }
konduit-data = { path = "crates/konduit-data" }
