[package]
name = "konduit-api"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64.workspace = true
blake3.workspace = true
bln-sdk.workspace = true
cardano-sdk.workspace = true
konduit-data.workspace = true
minicbor.workspace = true
serde.workspace = true
serde_with = { workspace = true, features = ["hex"] }
thiserror.workspace = true
cbor-with = { workspace = true, features = ["full"] }
# Server
actix-web    = { version = "4", optional = true }
futures      = { version = "0.3", optional = true }
# Spec generation
cuddly = { workspace = true, features = ["derive"], optional = true }
utoipa       = { workspace = true, optional = true }

[features]
actix   = ["dep:actix-web", "dep:futures"]
cddl    = ["dep:cuddly"]
openapi = ["dep:utoipa"]

[[bin]]
name = "generate_spec"
path = "src/bin/generate_spec.rs"
required-features = ["cddl"]

[[bin]]
name = "generate_openapi"
path = "src/bin/generate_openapi.rs"
required-features = ["openapi"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
