[package]
name = "konduit-data"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default     = []
aiken       = []
cddl        = ["dep:cuddly"]
cardano_sdk = ["dep:cardano-sdk", "dep:anyhow"]
proptest    = ["dep:proptest", "dep:proptest-derive", "cardano_sdk"]

[dependencies]
anyhow      = { workspace = true, optional = true }
cardano-sdk = { workspace = true, optional = true }
cbor-with = { workspace = true, features = ["full"] }
cryptoxide.workspace = true
hex.workspace = true
minicbor.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["hex"] }
thiserror.workspace = true
cuddly          = { workspace = true, features = ["derive"], optional = true }
proptest        = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

[[bin]]
name = "generate_cddl"
path = "src/bin/generate_cddl.rs"
required-features = ["cddl"]

[[bin]]
name = "generate_compat_tests"
path = "src/bin/generate_compat_tests.rs"
required-features = ["aiken"]

[dev-dependencies]
cddl-cat.workspace = true
proptest.workspace = true

[[test]]
name = "proptests"
required-features = ["proptest", "cddl"]
