[package]
name = "konduit-ex-data"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
konduit-data.workspace = true
bln-sdk.workspace = true
cardano-sdk.workspace = true
cbor-with = { workspace = true, features = ["full"] }
minicbor.workspace = true
serde.workspace = true
serde_with = { workspace = true, features = ["hex"] }
