[package]
name = "bln-client"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[[bin]]
name = "bln-cli"
path = "src/main.rs"

[features]
cli = ["dep:clap", "dep:dotenvy", "dep:humantime"]
namespaced = []

[dependencies]
async-trait.workspace = true
base64.workspace = true
bitcoin.workspace = true
futures.workspace = true
hex.workspace = true
lightning-invoice = { workspace = true, features = ["serde"] }
lightning-types.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["hex", "base64"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

# Binary-only dependencies (marked as optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }
dotenvy = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive", "env"]}
dotenvy = { workspace = true}
humantime = { workspace = true}
