[package]
name = "cardano-connect-blockfrost"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[dependencies]
anyhow.workspace = true
num.workspace = true
cardano-tx-builder = { path = "../cardano-tx-builder" }
cardano-connect = { path = "../cardano-connect" }
blockfrost-openapi = "0.1.75"
blockfrost = "1.1.0"
reqwest = "0.12.23"
