[package]
name = "cardano-connect-blockfrost"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[dependencies]
anyhow.workspace = true
blockfrost-openapi.workspace = true
blockfrost.workspace = true
cardano-tx-builder.workspace = true
cardano-connect.workspace = true
futures.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
