[package]
name = "cardano-connect-wasm"
description = "A wasm-friendly Cardano connector that connects to a compatible connector backend."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
cardano-connect = { workspace = true, features = ["wasm" ] }
cardano-tx-builder = { workspace = true, features = ["wasm"] }
futures-util.workspace = true
futures.workspace = true
getrandom = { workspace = true, features = ["js"] }
gloo-net.workspace = true
gloo-timers.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
web-time.workspace = true
