[package]
name = "cardano-connect"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
anyhow.workspace = true
cardano-tx-builder.workspace = true
serde.workspace = true
wasm-bindgen = { workspace = true, optional = true }
web-time.workspace = true
