[package]
name = "cardano-connector-client"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = [
  "cardano-sdk/wasm",
  "dep:http-client-wasm",
  "dep:js-sys",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
]

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

[dependencies]
anyhow.workspace = true
cardano-connector.workspace = true
cardano-sdk.workspace = true
hex.workspace = true
http-client.workspace = true
serde.workspace = true
serde_json.workspace = true
# -F wasm
http-client-wasm = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
