[package]
name = "cardano-connector-client"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
cardano-connector.workspace = true
cardano-sdk.workspace = true
hex.workspace = true
http-client.workspace = true
serde.workspace = true
serde_json.workspace = true
