[package]
name = "cardano-connector-direct"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blockfrost-openapi.workspace = true
blockfrost.workspace = true
cardano-connector.workspace = true
cardano-sdk.workspace = true
futures.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
