[package]
name = "cardano-sdk"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
clap = ["dep:clap"]
serde = ["dep:serde"]
test-utils = ["dep:proptest"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
anyhow.workspace = true
bech32.workspace = true
hex.workspace = true
itertools.workspace = true
minicbor.workspace = true
num-bigint.workspace = true
num.workspace = true
pallas-addresses.workspace = true
pallas-codec.workspace = true
pallas-crypto.workspace = true
pallas-primitives.workspace = true
rand_core.workspace = true
uplc.workspace = true
# -F clap
clap = { workspace = true, optional = true }
# -F serde
serde = { workspace = true, optional = true }
# -F test-utils
proptest = { workspace = true, optional = true }
# -F wasm
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
indoc.workspace = true
proptest.workspace = true

[target.'cfg(target_family="wasm")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
