[package]
name = "cardano-tx-builder"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[features]
default = []
test-utils = ["dep:proptest"]

[dependencies]
anyhow.workspace = true
bech32.workspace = true
cryptoxide.workspace = true
hex.workspace = true
minicbor.workspace = true
pallas-addresses.workspace = true
pallas-crypto.workspace = true
pallas-codec.workspace = true
pallas-primitives.workspace = true
uplc.workspace = true
num.workspace = true
itertools.workspace = true
num-bigint.workspace = true
proptest = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
