[package]
name = "cardano-tx-builder"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[features]
default = []
test-utils = ["dep:proptest"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
anyhow.workspace = true
hex.workspace = true
itertools.workspace = true
minicbor.workspace = true
num-bigint.workspace = true
num.workspace = true
pallas-addresses.workspace = true
pallas-codec.workspace = true
pallas-crypto.workspace = true
pallas-primitives.workspace = true
uplc.workspace = true

proptest = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
indoc.workspace = true
proptest.workspace = true
