[package]
name = "cbor-with"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
minicbor.workspace = true

cardano-sdk = { workspace = true, optional = true }

[features]
plutus-data = [ "dep:cardano-sdk" ]
