[package]
name = "http-client"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[features]
default = []
wasm = [
  "dep:anyhow",
  "dep:gloo-net",
  "dep:gloo-timers",
  "dep:js-sys",
  "dep:log",
  "dep:wasm-bindgen",
  "dep:web-sys",
  "dep:web-time",
]

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde.workspace = true
# -F wasm
anyhow = { workspace = true, optional = true }
gloo-timers = { workspace = true, optional = true }
gloo-net = { workspace = true, optional = true }
log = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
js-sys ={ workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
web-time = { workspace = true, optional = true }
